--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,30 +7,23 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
-    <title>Breathing Code by BreathingCode</title>
+    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>Breathing Code</h1>
-        <h2>The conference where code is alive!</h2>
-
-        <section id="downloads">
-          <a href="https://github.com/BreathingCode" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
+        <h1>{{ site.title }}</h1>
+        <h2>{{ site.tagline }}</h2>
       </div>
     </header>
 
     <div class="container">
       <section id="main_content">
-        <h1>
-<a id="breathingcodegithubio" class="anchor" href="#breathingcodegithubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>breathingcode.github.io</h1>
+        {{ content }}
       </section>
     </div>
 
-    
   </body>
 </html>
