--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,27 +4,41 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/breathing_code.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="/css/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/breathing_code.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/print.css" media="print">
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   </head>
 
   <body>
 
-    <header>
-      <div class="container">
-        <h1>{{ site.title }}</h1>
-        <h2>{{ site.tagline }}</h2>
-      </div>
-    </header>
+    <div id="outer-container">
+      <header>
+        <div class="container">
+          <h1><a href="/">{{ site.title }}</a></h1>
+          <h2>{{ site.tagline }}</h2>
+          <ul id="navigation">
+            <li><a href="/cfc.html">Call for Contributions</a></li>
+            <li><a href="/codeofconduct.html">Code of Conduct</a></li>
+          </ul>
+        </div>
+      </header>
 
-    <div class="container">
-      <section id="main_content">
-        {{ content }}
-      </section>
+      <div class="container">
+        <section id="main_content">
+          {{ content }}
+        </section>
+      </div>
     </div>
+
+    <footer>
+      <div class="container">
+        <ul id="navigation">
+          <li><a href="/aboutus.html">Impressum</a></li>
+        </ul>
+      </div>
+    </footer>
 
   </body>
 </html>
