--- a/css/styles.sass
+++ b/css/styles.sass
@@ -214,3 +214,10 @@ header
     height: 16px
     margin: 1px 8px 0 0
     float: left
+
+
+.live-stress
+  font-style: italic
+  color: rgba(255,145,0,0.9)
+
+
