--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
     <footer>
       <div class="container">
         <ul id="navigation">
-          <li><a href="/aboutus.html">Impressum</a></li>
+          <li><a href="/aboutus.html">About Us</a></li>
         </ul>
       </div>
     </footer>
