--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,11 +13,11 @@
     <div id="outer-container">
       <header>
         <div class="container">
-          <h1><a href="/">{{ site.title }}</a></h1>
-          <ul id="navigation">
+          <ul class="navigation">
             <li><a href="/cfc.html">Call for Contributions</a></li>
             <li><a href="/codeofconduct.html">Code of Conduct</a></li>
           </ul>
+          <h1><a href="/">{{ site.title }}</a></h1>
         </div>
       </header>
 
@@ -30,7 +30,7 @@
 
     <footer>
       <div class="container">
-        <ul id="navigation">
+        <ul class="navigation">
           <li><a href="/aboutus.html">About Us</a></li>
         </ul>
       </div>
