--- a/css/styles.sass
+++ b/css/styles.sass
@@ -41,20 +41,19 @@ a
   color: #63c0f5
   text-shadow: 0 0 5px rgba(104, 182, 255, 0.5)
 
-li
-  line-height: 1.4
-
-ul 
+ul
+  margin: 10px 0 10px 0
   li
+    line-height: 1.4
     list-style: none
 
   li:before
     content: ">>"
     font-size: 13px
     color: $green
-    margin-left: -37px
     margin-right: 21px
     line-height: 16px
+
 
 footer
   width: 100%
@@ -67,15 +66,12 @@ footer
   height: 40px
   clear: both
 
-  li:before
-    content: ""
-
 
 header
   background: rgba(0, 0, 0, 0.1)
   width: 100%
   border-bottom: 1px dashed $green
-  padding: 20px 0
+  padding: 0
   margin: 0 0 40px 0
 
   h1
@@ -100,16 +96,22 @@ header
     font-weight: 300
     color: #666
 
-  ul
+  ul.navigation
     margin: 0 0 0 0
-    padding: 0 0 0 10px
+    padding-bottom: 20px
+    padding-top: 10px
     li
+      padding-left: 0
+      margin: 0 30px 0 0 
       display: inline
-      padding-right: 20px 
-    li:before
-      margin-left: -10px
-      margin-right: 10px
-      line-height: 16px
+
+
+.navigation
+  font-size: 13px
+
+  li:before
+    content: ""
+    margin: 0
 
 
 #main_content
@@ -220,4 +222,51 @@ header
   font-style: italic
   color: rgba(255,145,0,0.9)
 
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px)
+  html, body
+    font-size: 13px
+    line-height: 1.3
+
+  header 
+    margin-bottom: 10px
+
+    h1
+      font-size: 24px
+      line-height: 1.5
+      margin: 0 0 0 -5px
+
+    h1:before
+      font-size: 24px
+
+    ul.navigation
+      li
+        margin: 10px 5px 0 0 
+
+  .navigation
+    font-size: 12px
+
+  ul
+    li
+      line-height: 1.4
+      list-style: none
+
+    li:before
+      content: ">>"
+      font-size: 13px
+      color: $green
+      margin-right: 10px
+
+  #main_content
+    h1
+      font-size: 20px
+    h2
+      font-size: 18px
+    h3
+      font-size: 16px
+    h4
+      font-size: 14px
+    h5
+      font-size: 12px
+    h6
+      font-size: 12px
 
