--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
         <div class="container">
           <ul class="navigation">
             <li><a href="/cfc.html">Call for Contributions</a></li>
+            <li><a href="/news.html">News</a></li>
             <li><a href="/codeofconduct.html">Code of Conduct</a></li>
           </ul>
           <h1><a href="/">{{ site.title }}</a></h1>
