--- a/css/styles.sass
+++ b/css/styles.sass
@@ -3,13 +3,14 @@
 $green: #b5e853
 $highlight: rgba(255,145,0,0.9)
 $font: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace
+$bg: #151515 url("../images/bkg.png") 0 0
 
 *
   margin: 0
   padding: 0
 
 html, body
-  background: #151515 url("../images/bkg.png") 0 0
+  background: $bg
   color: #eaeaea
   font: 16px
   line-height: 1.5
@@ -247,13 +248,18 @@ ul#posts
   color: $highlight
 
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px)
+@media only screen and (min-device-width : 481px)
+  .slicknav_menu
+    display: none
+
+@media only screen and (max-device-width : 480px)
   html, body
     font-size: 13px
     line-height: 1.3
 
   header
     margin-bottom: 10px
+    padding: 10px
 
     h1
       font-size: 24px
@@ -294,3 +300,21 @@ ul#posts
       font-size: 12px
     h6
       font-size: 12px
+
+  #menu
+    display: none
+
+  .slicknav_menu
+    position: absolute
+    top: 10px
+    right: 5px
+    display: block
+    width: 100%
+    background: $bg
+
+    .slicknav_nav
+      padding: 10px
+    .slicknav_btn
+      position: absolute
+      top: 10px
+      right: 5px
