Added related events and stuff section on homepage

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -49,6 +49,9 @@ ul
   li
     line-height: 1.4
     list-style: none
+    padding-bottom: 5px
+    padding-left: 36px
+    text-indent: -36px
 
   li:before
     content: ">>"
