--- a/css/styles.sass
+++ b/css/styles.sass
@@ -34,7 +34,7 @@ section img
   max-width: 100%
 
 h1, h2, h3, h4, h5, h6
-  margin: 20px 0 20px
+  margin: 25px 0 25px
   font-weight: normal
   color: $green
   letter-spacing: -0.03em
@@ -153,6 +153,7 @@ ul#posts
     font-size: 30px
 
   h2
+    margin: 45px 0 25px
     font-size: 24px
 
   h3
@@ -172,17 +173,21 @@ ul#posts
     color: #999
     margin: 0 0 5px 0
 
+  p
+    margin: 15px 0 15px 0
 
   dt
     font-style: italic
     font-weight: bold
-
 
   blockquote
     color: #aaa
     padding-left: 10px
     border-left: 1px dotted #666
 
+  em
+    font-style: italic
+    color: $highlight
 
   pre
     background: rgba(0, 0, 0, 0.9)
@@ -197,21 +202,17 @@ ul#posts
     overflow: auto
     overflow-y: hidden
 
-
   table
     width: 100%
     margin: 0 0 20px 0
-
 
   th
     text-align: left
     border-bottom: 1px dashed $green
     padding: 5px 10px
 
-
   td
     padding: 5px 10px
-
 
   hr
     height: 0
@@ -246,10 +247,6 @@ ul#posts
     margin: 1px 8px 0 0
     float: left
 
-
-.live-stress
-  font-style: italic
-  color: $highlight
 
 .twitter-timeline
   margin: 20px auto
