--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
             <li><a href="/cfc.html">Call for Contributions</a></li>
             <li><a href="/news.html">News</a></li>
             <li><a href="/codeofconduct.html">Code of Conduct</a></li>
+            <li><a href="/register.html">Register</a></li>
           </ul>
           <h1><a href="/">{{ site.title }}</a></h1>
         </div>
