--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,10 @@
         <div class="container">
           <ul id="menu" class="navigation">
             <li><a href="/cfc.html">Call for Contributions</a></li>
-            <li><a href="/news.html">News</a></li>
             <li><a href="/codeofconduct.html">Code of Conduct</a></li>
             <li><a href="/register.html">Register</a></li>
+            <li><a href="/news.html">News</a></li>
+            <li><a href="/details.html">Details</a></li>
           </ul>
           <h1><a href="/">{{ site.title }}</a></h1>
         </div>
