adding sponsor page draft

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
           <ul id="menu" class="navigation">
             <li><a href="/register.html">Register</a></li>
             <li><a href="/news.html">News</a></li>
-            <li><a href="/cfc.html">Call for Contributions</a></li>
+            <li><a href="/sponsoring.html">Sponsoring</a></li>
             <li><a href="/codeofconduct.html">Code of Conduct</a></li>
             <li><a href="/details.html">Details</a></li>
           </ul>
