Added Venues page and nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@
           <ul id="menu" class="navigation">
             <li><a href="/register.html">Register</a></li>
             <li><a href="/news.html">News</a></li>
+            <li><a href="/venues.html">Venues</a></li>
             <li><a href="/sponsoring.html">Sponsoring</a></li>
-            <li><a href="/codeofconduct.html">Code of Conduct</a></li>
             <li><a href="/details.html">Details</a></li>
           </ul>
           <h1><a href="/">{{ site.title }}</a></h1>
@@ -39,6 +39,7 @@
       <footer>
         <div class="container">
           <ul class="navigation">
+            <li><a href="/codeofconduct.html">Code of Conduct</a></li>
             <li><a href="/aboutus.html">About Us</a></li>
           </ul>
         </div>
