Added hotels to venues page and added configurable contact email

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <ul id="menu" class="navigation">
       <li><a href="/register.html">Register</a></li>
       <li><a href="/program.html">Program</a></li>
-      <li><a href="/venues.html">Venues</a></li>
+      <li><a href="/venues.html">Venues &amp; Hotels</a></li>
       <li><a href="/sponsoring.html">Sponsoring</a></li>
       <li><a href="/news.html">News</a></li>
       <li><a href="/details.html">Details</a></li>
