adding a register now banner to all pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,7 @@
+<span id="registerbanner">
+  <a href="http://breathing-code.de/register.html">Register now!</a>
+</span>
+
 <header>
   <div class="container">
     <ul id="menu" class="navigation">
