making markup on program page a little more semantic

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -284,6 +284,9 @@ td
       background: $bg
       text-align: center
 
+  .session-separator
+    clear: both
+
 
 @media only screen and (min-device-width : 481px)
   .slicknav_menu
