Added performers to program overview in grid layout

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -287,6 +287,21 @@ td
   .session-separator
     clear: both
 
+  ul.program-overview
+    @include column(10)
+
+    li:before
+      content: ""
+
+    a.session
+      @include column(7)
+
+    a.performer
+      @include column(3)
+      color: $highlight
+      text-decoration: none
+
+
 
 @media only screen and (min-device-width : 481px)
   .slicknav_menu
