Added cancellation announcement

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -369,3 +369,7 @@ td
       img
         @include column(6)
         @include push(3)
+
+  .anncouncement
+    font-size: 18px
+    color: $highlight
