--- a/css/styles.sass
+++ b/css/styles.sass
@@ -370,6 +370,6 @@ td
         @include column(6)
         @include push(3)
 
-  .anncouncement
+  .announcement
     font-size: 18px
-    color: $highlight
+    color: $linkcolor
