--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,10 @@
       {% include header.html %}
 
       <div class="container">
+        <div class="announcement">
+          <a href="/2015/04/01/cancelling-the-conference.html">The conference has been cancelled.</a>
+        </div>
+
         <section id="main_content">
           {{ content }}
         </section>
