transforming cancellation announcement to banner

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,6 @@
-<!--
-<span id="registerbanner">
-  <a href="http://breathing-code.de/register.html">Register now!</a>
+<span id="announcementbanner">
+  <a href="/2015/04/01/cancelling-the-conference.html">Cancelled!</a>
 </span>
--->
 
 <header>
   <div class="container">
