--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,16 +10,14 @@
 <meta property="og:url" content="{{ site.url }}{{ page.url }}">
 <meta property="og:site_name" content="{{ site.title }}">
 
-<!--
 <style>
-  #registerbanner
-  a{background:#B5E853;color:#151515;text-decoration:none;font-family:arial,sans-serif;text-align:center;font-weight:bold;padding:5px
-  40px;font-size:1rem;line-height:2rem;position:relative;transition:0.5s;}#registerbanner
-  a:hover{background:#B5E853;color:#fff;}#registerbanner a::before,#registerbanner
-  a::after{content:"";width:100%;display:block;position:absolute;top:1px;left:0;height:1px;background:#fff;}#registerbanner
-  a::after{bottom:1px;top:auto;}@media screen and
-  (min-width:800px){#registerbanner{position:fixed;display:block;top:0;right:0;width:200px;overflow:hidden;height:200px;z-index:9999;}#registerbanner
-  a{width:200px;position:absolute;top:60px;right:-60px;transform:rotate(45deg);-webkit-transform:rotate(45deg);-ms-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);box-shadow:4px
-  4px 10px rgba(0,0,0,0.8);}}
+  #announcementbanner a{ text-transform: uppercase; background:#B5E853;color:#151515;text-decoration:none;font-family:arial,sans-serif;text-align:center;font-weight:bold;padding:5px 40px;font-size:1rem;line-height:2rem;position:relative;transition:0.5s;}
+  #announcementbanner a:hover{background:#B5E853;color:#fff;}
+  #announcementbanner a::before, #announcementbanner a::after { content:"";width:100%;display:block;position:absolute;top:1px;left:0;height:1px;background:#fff; }
+  #announcementbanner a::after{bottom:1px;top:auto;}
+  
+  @media screen and (min-width:800px) {
+    #announcementbanner {position:fixed;display:block;top:0;right:0;width:200px;overflow:hidden;height:200px;z-index:9999;}
+    #announcementbanner a{width:200px;position:absolute;top:60px;right:-60px;transform:rotate(45deg);-webkit-transform:rotate(45deg);-ms-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);box-shadow:4px 4px 10px rgba(0,0,0,0.8);}
+  }
 </style>
--->
